about us extra spacing fixed and aligned

--- a/src/Pages/About/people/page.css
+++ b/src/Pages/About/people/page.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 150px;
-    margin: 10% 11.5%;
+    margin: 20% 11.5%;
 }
 
 .people-container p {
@@ -109,7 +109,7 @@
     display: flex;
     flex-direction: column;
     background-color: #161833;
-    height: 63.5vh;
+    height: 65vh;
 }
 
 .vd-desc-intro,
@@ -136,7 +136,7 @@
 .mitchell-desc-intro p {
     color: white;
     font-family: "Adobe Caslon Pro";
-    font-size: 3vh;
+    font-size: 3.7vh;
     font-style: normal;
     font-weight: 400;
     line-height: 5vh; /* 133.333% */
